--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
       run: npm install
 
     - name: Run Unit Tests
-      run: npm run unit-test
+      run: npm run test:unit
 
     - name: Run Integration Tests
-      run: npm run integration-test
+      run: npm run test:integration
 
 
 
